fixing navigation on index page and setting up an article page

--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,9 @@
 @import "/css/variables.css";
 
+#introduction img{
+  cursor: pointer;
+}
+
 .rotate {
   animation: rotation 2s infinite linear;
 }
