fixing elements overriding by bootstrap on selection page

--- a/css/selection.css
+++ b/css/selection.css
@@ -156,6 +156,13 @@ display: none;
 
   }
 
+ p.intro{
+max-width: 50%;
+margin-left:auto;
+margin-right:auto;
+
+ }
+
   #snippetNav{
     display: flex;
     flex-direction: row;
