--- a/css/global.css
+++ b/css/global.css
@@ -8,6 +8,10 @@
   cursor: pointer;
   float:right;
   padding:5px 7px 5px 7px;
+    line-height:initial;
+    font-family: initial;
+    font-size: initial;
+  
 }
 
 .nav{
@@ -20,6 +24,8 @@
 .nav:hover{
   padding:5px 7px 5px 7px;
   text-decoration: none;
+  color:var(--primaryDark);
+  
 
 }
 #mainNav{
@@ -42,13 +48,16 @@
   
 }
 
-.btn{
+.mybtn{
   background-color: var(--primaryDark);
   color: var(--primaryLight);
   box-shadow: 0px 8px 16px 0px var(--shadow);
   border:none;
+  line-height:initial;
+  font-family: initial;
+  font-size: initial;
 }
-.btn:hover{
+.mybtn:hover{
   background-color: var(--whiteDark);
   color: var(--primary);
   box-shadow: 0px 8px 16px 0px var(--shadow);
@@ -71,7 +80,6 @@ body {
   flex-direction: column;
   margin: 0px;
   font-size: 16px;
-  color: var(--textColor);
   background-color:var(--bg);
   font-family: var(--text);
 }
@@ -104,8 +112,6 @@ header {
 }
 
 
-
-
 .logoHead a{
   margin-left: 10px;
   width: 50%;;
@@ -115,9 +121,11 @@ header {
   padding:4px 0px 4px 0px;
   text-decoration-line: none;
   float: left;
-  
 } 
 
+#logoHead a{
+  color:black;
+}
 .logoHead img{
   max-width:7%;
   vertical-align: middle;
@@ -150,7 +158,6 @@ header {
 
 #introduction p{
   padding:20px 20px 30px 20px;;
-  margin:10px;
   color:var(--black);
 }
 
@@ -206,10 +213,9 @@ footer a {
 footer a:hover {
   text-decoration-line: underline;
   cursor:pointer;
+  color: var(--primaryDark);
+
 }
-
-
-
 
 
 
@@ -314,7 +320,9 @@ footer a:hover {
   flex-direction: row;
   min-width: 100%;
   justify-content: space-between;
-  max-height:8%;
+  max-height:15%;
+  background-color:var(--white);
+  padding-bottom: 0px;;
 }
 
 #navLeft{
@@ -335,6 +343,7 @@ footer a:hover {
   font-style: oblique;
   padding:4px 0px 4px 0px;
   text-decoration-line: none;
+  align-self: center;
   
 } 
 
