--- a/css/global.css
+++ b/css/global.css
@@ -8,16 +8,16 @@
   cursor: pointer;
   float:right;
   padding:5px 7px 5px 7px;
-    line-height:initial;
-    font-family: initial;
-    font-size: initial;
-  
+  line-height:initial;
+  font-family: initial;
+  font-size: initial; 
 }
 
 .nav{
   padding:5px 7px 5px 7px;
   color:var(--secondaryDark);
   text-decoration: none;
+
 
 }
 
@@ -57,13 +57,11 @@
   font-family: initial;
   font-size: initial;
 }
-.mybtn:hover{
+.mybtn:hover, .active{
   background-color: var(--whiteDark);
   color: var(--primary);
   box-shadow: 0px 8px 16px 0px var(--shadow);
 }
-
-
 .show {
   display: inline-block;
   max-width: 100%;;
@@ -80,8 +78,7 @@ body {
   flex-direction: column;
   margin: 0px;
   font-size: 16px;
-  background-color:var(--bg);
-  font-family: var(--text);
+  font-family: var(--textFont);
 }
 
 .content {
@@ -288,7 +285,7 @@ footer a:hover {
  }
       
   #introduction{
-    height:400px;
+    max-height:400px;
     max-width: 100%;
     }
 
@@ -314,7 +311,6 @@ footer a:hover {
 
 
 #mylinks{
-  overflow-x:auto;
   transition: 0.5s;
   display:flex;
   flex-direction: row;
@@ -374,4 +370,7 @@ footer a:hover {
 
 body{
   background-color:var(--white);
+  font-family: var(--texta);
+ 
+
 }
