--- a/css/index.css
+++ b/css/index.css
@@ -23,10 +23,7 @@
   color:var(--white);
   padding: 10px;
 }
-.headline h1 {
-  font-size: 36px;
-  margin: 20px;
-}
+
 .headline p {
   font-style: oblique;
   font-size: 24px;
@@ -229,13 +226,14 @@
   height: 10px;
   width: 10px;
   margin: 0 2px;
-  background-color: var(--text);
   border-radius: 50px;
   display: inline-block;
   transition: background-color 0.6s ease;
+  background-color: var(--primaryLight)
+
 }
 
-.active,
+.activeDot,
 .dot:hover {
   background-color: var(--primary)
 }
