--- a/css/variables.css
+++ b/css/variables.css
@@ -31,18 +31,18 @@
     --primaryLight:#71a36e;
     --primaryDark:#4f7c4d;
 
-    --secondary:#bb7c52;
+    --secondary:#f3b78e;
     --secondaryLight:#c8865a;
     --secondaryDark:#a8714c;
 
     --shadowlight:#92929233;
     --shadow:#00000055;
 
-    --white:#c8c8c8;
-    --whiteDark:#a5a5a5;
-    --whiteDarker:#808080;
+    --white:#a09e9e;
+    --whiteDark:#837f7f;
+    --whiteDarker:#615f5f;
   
-    --black:#181818;
+    --black:#1a1a1d;
     --blackLight:#222020;
     --blackDark:#131212;
 
