--- a/css/contact.css
+++ b/css/contact.css
@@ -15,13 +15,11 @@ input:focus, textarea:focus{
 input, textarea{
   padding:10px;
 }
-label{
-  margin:10px 0px 10px 0px;
-}
+
 /* form */
 .gridConForForm {
   display: grid;
-  grid-gap: 10px;
+  grid-gap: 30px;
   grid-template-columns: auto;
   grid-template-rows: 40px;
   max-width: 90%;
@@ -77,17 +75,35 @@ resize: none;
 #submit{
 min-width: 100%;
 margin-top:40px;
+border:var(--secondaryDark) 2px solid;
+background-color: var(--secondaryDark);
+border-radius: 2px;
 }
 
 
 @media only screen and (min-width: 400px) and (max-width: 600px) { /*surfplatta
+
   */
+
+  
+.gridConForForm {
+  display: grid;
+  grid-gap: 30px;
+  width: 90%;
+  margin-right:auto;
+  margin-left:auto;
+}
  
 }
 
 @media only screen and (min-width: 600px) and (max-width: 9000px) { 
 
-  
+#introduction p{
+  width:80%;
+  margin: auto;
+
+}
+
 .gridConForForm {
   display: grid;
   grid-gap: 10px;
@@ -145,6 +161,7 @@ min-height:100px;
 resize: none;
 }
 
+
 #submit{
 min-width: 100%;
 margin-top:40px;
@@ -152,21 +169,50 @@ margin-top:40px;
 
 
 form{
-  max-width: 55%;
-  min-width: 55%;
+  max-width: 85%;
+  min-width: 85%;
 
 }
 
+#bodyContainer{
+  margin-top:100px;
+}
 
 }
   
-
   
 @media only screen and (min-width: 900px) and (max-width: 1300px) { /*surfplatta
   */
 
+ 
+  .gridConForForm {
+    display: grid;
+    grid-gap: 30px;
+    grid-template-columns: auto auto;
+    grid-template-rows: 40px;
+    max-width: 70%;
+    margin-right:auto;
+    margin-left:auto;
+    margin-top: 30px;
+    margin-bottom: 100px;
+  }
 }
 
 @media only screen and (min-width: 1300px) and (max-width: 40000px) { 
-  
+    .gridConForForm {
+      display: grid;
+      grid-gap: 30px;
+      grid-template-columns: auto auto;
+      grid-template-rows: 40px;
+      max-width: 60%;
+      margin-right:auto;
+      margin-left:auto;
+      margin-top: 30px;
+      margin-bottom: 100px;
+    }
+    #introduction p{
+      width:60%;
+      margin: auto;
+    
+    }
 }
