--- a/css/global.css
+++ b/css/global.css
@@ -1,15 +1,20 @@
 
 @import "/css/variables.css";
+body{
+  background-color: var(--whiteDark);
+  font-family:var(--texta);
+}
 
 .dropDown {
   background-color:var(--secondary);
   color:var(--secondaryDark);
   border: none;
   cursor: pointer;
-  padding:5px 7px 5px 7px;
+  padding:5px;
   line-height:initial;
   font-family: initial;
   font-size: initial; 
+  margin-top:20px;
 }
 
 .nav{
@@ -17,62 +22,67 @@
   color:var(--secondaryDark);
   text-decoration: none;
   text-align: center;
-
-
+  margin: auto;
 }
 
 .nav:hover{
   padding:5px 7px 5px 7px;
   text-decoration: none;
   color:var(--primaryDark);
-  
-
 }
+
 #mainNav{
   justify-content: end;
   display: flex;
-  flex-direction: column-reverse;
+  flex-direction: column;
 }
 
-.dropDown:hover, .dropDown:focus {
+.dropDown:hover, .dropDown:focus, .dropDown {
   background-color: var(--primaryDark);
-  color: var(--primaryLight)
+  color: var(--primaryLight);
+  
 }
 
 .dropdown {
   position: relative;
   margin:auto;
-  
+  margin-bottom: 30px;;
 }
 
 .dropdown-content {
   display: none;
-  
 }
 
-.mybtn{
-  background-color: var(--primaryDark);
-  color: var(--primaryLight);
-  box-shadow: 0px 8px 16px 0px var(--shadow);
-  border:none;
-  line-height:initial;
-  font-family: initial;
-  font-size: initial;
-}
+
 .mybtn:hover, .active{
   background-color: var(--whiteDark);
   color: var(--primary);
   box-shadow: 0px 8px 16px 0px var(--shadow);
 }
+
+.mybtn{
+  background-color: var(--primary);
+  color: var(--white);
+  box-shadow: 0px 8px 16px 0px var(--shadow);
+  border:none;
+  line-height:initial;
+  font-family: initial;
+  font-size: initial;
+  padding:5px;
+  margin-top: 1px;;
+}
+
 .show {
   display:flex;
-  flex-direction: column;
+  flex-direction: column-reverse;
   max-width: 100%;;
+
 }
 body,
 header,
 footer {
   max-width: 100vw;
+
 }
 body {
   min-height: 100vh;
@@ -81,7 +91,6 @@ body {
   flex-direction: column;
   margin: 0px;
   font-size: 16px;
-  font-family: var(--textFont);
 }
 
 .content {
@@ -98,18 +107,20 @@ header {
 #mylinks{
   height: 100%;
   width: 0;
-  position: fixed;
-  z-index: 1;
+  position: relative;
   top: 0;
   left: 0;
   overflow-x: hidden;
   transition: 0.5s;
-  background-color: lawngreen;
+  background-color:var(--whiteDark);
+  display: inline-flexbox;
+  z-index: 10;
 }
 
 
 .icon{
-  position: absolute
+  position: absolute;
+  margin:5px;
 }
 
 
@@ -128,6 +139,7 @@ header {
 #logoHead a{
   color:black;
 }
+
 .logoHead img{
   max-width:7%;
   vertical-align: middle;
@@ -138,7 +150,6 @@ header {
   text-align: center;
   margin-bottom: 20px;;
 }
-
 
 
 #closeTag{
@@ -172,22 +183,30 @@ align-self: center;
 }
 
 
-#introduction{
-  margin-top:80px;
+#introduction .firstHeading{
+  text-align: center;
+  font-size: 36px;
+  font-weight:bolder;
   margin-left: auto;
   margin-right: auto;
+}
+
+#introduction{
+  display: flex;
+  flex-direction: column;
   text-align: center;
-  font-size: 24px;
-  font-weight:bolder;
-  font-style: oblique;
-  padding:4px 0px 4px 0px;
-  max-width: 90%;
+  max-width: 50%;
+  margin:auto
+}
+
+#logan{
+  margin:auto;
 }
 /* footer */
 
 footer {
   flex-shrink: 0;
-  background-color:var(--black);
+  background-color:var(--whiteDarker);
 }
 
 footer ul {
@@ -199,7 +218,6 @@ footer ul {
 ul .list{
   display: flex;
   flex-direction:column;
-  margin:auto;
   
 }
 
@@ -214,19 +232,18 @@ ul .list{
 }
 
 footer p {
-  color: var(--whiteDark);
+  color: var(--blackLight);
 }
 footer a {
-  color: var(--primaryDark);
+  color: var(--secondaryDark);
   text-decoration: none;
 }
 footer a:hover {
   text-decoration-line: underline;
   cursor:pointer;
-  color: var(--primaryDark);
+  color: var(--secondary);
 
 }
-
 
 
 #sitemap{
@@ -240,12 +257,13 @@ footer a:hover {
   max-width: 75%;
   margin:auto;
   margin-top: 0px;
+  padding:0px;
   
 }
 
 
 .firstItemInList{
- color:var(--primaryLight);
+ color:var(--secondaryLight);
  font-weight:bold;
  text-decoration: none;
 }
@@ -290,68 +308,25 @@ footer a:hover {
 @media only screen and (min-width: 1300px) and (max-width: 40000px) { /*surfplatta
   */
   
- #introduction a{
-  max-width: 20%;
-  margin-left: auto;
-  margin-right: auto;
-
- }
-      
   #introduction{
-    max-height:400px;
-    max-width: 100%;
+    margin-top:150px;
     }
 
 
-
-#bodyContainer {
-  max-width: 100%;
-  min-width: 100%;
-  margin-right: auto;
-  margin-left: auto;
-}
-.content {
-  max-width: 100%;;
-  display: flex ;
-  flex-direction: row;
-
-}
-
-#mainNav{
-  display: flex;
-  flex-direction: row;
-}
-
-
 #mylinks{
-  transition: 0.5s;
   display:flex;
-  flex-direction: column;
+  flex-direction: row;
   min-width: 100%;
   justify-content: space-between;
-  max-height:15%;
+  max-height:10%;
   background-color:var(--white);
   padding-bottom: 0px;;
-}
-
-#navLeft{
-  display: flex;
-  flex-direction: column;
-  justify-self: unset;
-}
-
-.icon{
-  position: absolute;
 }
 
 
 
 #logoHead{
   width: 300px;
-  font-size: 24px;
-  font-weight:bolder;
-  font-style: oblique;
-  padding:4px 0px 4px 0px;
   text-decoration-line: none;
   align-self: center;
   
@@ -364,27 +339,99 @@ footer a:hover {
 
 
 #closeTag{
-  font-size: 24px;
-  padding: 20px 10px 20px 10px;
-  cursor: pointer;
-  margin:3px 3px 3px 3px;
   display: none;
 }
-
-
 
 
 #toggle{
-  max-width: 30px;
-  max-height: 30px;
   display: none;
 }
 
+
+.nav{
+  padding:5px 7px 5px 7px;
+  color:var(--secondaryDark);
+  text-decoration: none;
+  text-align: center;
+  }
+
+.nav:hover{
+  text-decoration: none;
+  color:var(--primaryDark);
+  
+  
+}
+#mainNav{
+  display: flex;
+  flex-direction: row;
 }
 
-body{
-  background-color:var(--white);
-  font-family: var(--texta);
- 
+.dropdown {
+  position: relative;
+  margin:0px;
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: flex-end;
+}
+
+.dropDown{
+  margin-top:0px;
+  margin-left:5px;
+  padding:5px;
+  color:var(--primaryLight)
+}
+
+.dropdown-content {
+  display: none;
+  
+}
+
+.mybtn{
+  border:none;
+  line-height:initial;
+  font-family: initial;
+  font-size: initial;
+  padding:5px;
+  margin-top: 1px;;
+}
+
+.dropdown {
+  position: relative;
+  margin:0px;
+  align-self: end;
+  margin-bottom: 30px;;
+}
+
+.mybtn:hover, .active{
+  background-color: var(--whiteDark);
+  color: var(--primary);
+  box-shadow: 0px 8px 16px 0px var(--shadow);
+}
+.show {
+  display:inline;
+  flex-direction: row;
+}
+
+.logoHead img{
+  max-width:12%;
+  padding:5px;
+}
+
+
+#navLeft{
+  display: flex;
+  flex-direction: column;
+  align-self: baseline;
+}
+
 
 }
+
+
+
+
+
+
+
+
+
